--- a/analytics/templates/index.html
+++ b/analytics/templates/index.html
@@ -81,3 +81,11 @@ $(function () {
     });
 });
 </script>
+<div style="width:100%; height:400px;">
+<h2>Highscores</h2>
+<ol>
+  {% for event in topScores %}
+  <li>{{ event.value_float }}</li>
+  {%endfor%}
+</ol>
+</div>
